# docuagent

./: .env.example  .gitignore  Dockerfile  DocuAgent_Technical_Blueprint.md  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml
configs/: baseline.yaml
data/eval/: gold_v1.jsonl
infra/postgres-init/: 001-create-langfuse-db.sh
reports/: phase2_smoke.json
src/docuagent/: config.py
src/docuagent/api/: main.py
src/docuagent/api/routers/: health.py  ingest.py  query.py
src/docuagent/eval/: metrics.py  run.py
src/docuagent/ingest/: chunk.py  embed.py  index.py  parse.py  worker.py
src/docuagent/providers/: embeddings.py  llm.py  rerank.py
src/docuagent/retrieve/: hybrid.py
src/docuagent/storage/: db.py  models.py  qdrant_client.py
