[project]
name = "docuagent"
version = "0.1.0"
description = "Agentic Document Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "redis>=5.1",
    "rq>=2.0",
    "qdrant-client>=1.12",
    "pymupdf>=1.24",
    "sentence-transformers>=3.2",
    "httpx>=0.27",
    "tiktoken>=0.8",
]

[project.optional-dependencies]
graph = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
eval = [
    "pyyaml>=6.0",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
